--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -1,82 +1,62 @@
 ---
 layout: default
-slug: liberation-through-movement
-title: Liberation Through Movement
+slug: liberation-through-movement-mentorship
+title: Liberation Through Movement Mentorship
 description_html: >-
-  <p>​Liberation Through Movement is an online global tribe for women who are
-  ready to:</p><ul><li>Let go of the need to push to find their place and worth
-  in the world.</li><li>Gain the knowledge needed to realign with their feminine
-  way of expansion.</li><li>Learn new embodiment practices and participate in
-  unique life-changing experiences.</li><li>Awaken and celebrate their feminine
-  expressions - finding safety and pleasure in feeling.</li><li>Be supported by
-  women all over the world, held in a container of safety and
-  permission.</li></ul>
-featured-image: /uploads/images/manamei-23.jpg
+  <p>Add description here</p>
+featured-image: /uploads/images/manamei-24.jpg
 heading:
-  title: Liberation Through Movement
-  subtitle: Membership Tribe
-  description: >-
-    Connecting women around the world in shared experiences of feminine
-    embodiment.
+  title: Liberation Through Movement Mentorship
+  subtitle: Mentorship & Facilitator Training
+  description_html: >-
+    Short description here.
   button-enroll:
-    text: Join now
-    url: https://liberationthroughmovement.mn.co
+    text: Apply now
+    url: 
   button-video:
-    show: true
+    show: false
     text: Watch the video
-    url: https://youtu.be/VOS9H1czAhU?si=mbz84MhvrBivX01-
-  background_image: /uploads/images/manamei-14.jpg
+    url: 
+  background_image: /uploads/images/manamei-24.jpg
 banner:
-  - image_path: /uploads/icons/manamei-19.png
-    title: Ritual
-    benefit: A loving relationship with your body
-  - image_path: /uploads/icons/manamei-20.png
-    title: Expression
-    benefit: Radical & lasting self acceptance
-  - image_path: /uploads/icons/manamei-21.png
-    title: Awaken
-    benefit: Your feminine passion and creativity
-video:
-  show: true
-  url:
+  - image_path: 
+    title: Phase 1
+    benefit: Connection to the physical body
+  - image_path: 
+    title: Phase 2
+    benefit: Connection to the emotional body
+  - image_path: 
+    title: Phase 3
+    benefit: Connection to the transpersonal body
+  - image_path: 
+    title: Phase 4
+    benefit: The art of authentic space holding and LTM Facilitator training
 course-description:
-  heading: Discover the essence of Wisdom Body
-  description: >-
-    This program is a personal deep dive into 12 powerful embodied movement and
-    somatic dance practices - broken down into 4 themed-modules including 3
-    practices each, Movement Meditation, Somatic Activation, Embodied Liberation
+  heading: Discover the essence of the LTM Mentorship
+  description_html: >-
+    <p>Add description here</p>
   module:
-    - image_path: /uploads/icons/manamei-7.png
-      title: Meditation
-      description_html: >-
-        <p>Learn to relax the mind and surrender into full awareness &
-        acceptance of the feeling body.</p><p>Gain the tools to come into an
-        embodied presence at every moment of your life.<br>Move through your
-        daily life with ease, while never losing connection to your internal
-        wisdom.</p>
-    - image_path: /uploads/icons/manamei-5.png
-      title: Activation
-      description_html: >-
-        <p>Increase your movement vocabulary, expanding your capacity to express
-        yourself through dance.<br>Activate your whole-body awareness, fluidity,
-        and kinesthetic body intelligence.</p><p>Learn new somatic movement
-        practices, exploring the infinite movement pathways, and expanding your
-        skill set for how to effectively express through your body.</p>
-    - image_path: /uploads/icons/manamei-6.png
-      title: Liberation
-      description_html: >-
-        <p>Explore, unlock, and celebrate ALL of your Feminine
-        expressions.</p><p>Harness the power of all of your emotions and
-        transmute this energy into movement for manifestation and
-        creation.</p><p>Learn how to use movement as a prayer and devotional
-        practice to yourself, weaving together your dreams with your
-        reality.</p><p>Become the creatrix of your life and empower yourself to
-        take inspired action, the feminine way, with fluidity and grace.</P
+   - image_path: /uploads/icons/manamei-6.png
+     title: Phase 1, Connection to the Physical Body
+     description_html: >-
+       <p>Description</p>
+   - image_path: /uploads/icons/manamei-6.png
+     title: Phase 2, Connection to the Emotional Body
+     description_html: >-
+       <p>Description</p>
+   - image_path: /uploads/icons/manamei-6.png
+     title: Phase 3, Connection to the Transpersonal Body
+     description_html: >-
+       <p>Description</p>
+   - image_path: /uploads/icons/manamei-6.png
+     title: Phase 4, The art of authentic space holding and LTM Facilitator training
+     description_html: >-
+       <p>Description</p>
 who-its-for:
-  heading: Who the Wisdom Body Immersion is for
-  description_html: "<p>Anyone who wants to go deeper, who may already have some experience in embodied movement, or whose already playing with using dance and movement as part of their personal development and healing modality, but wants more options, tools, guidance, and inspiration.</p><p>People that are new to embodied dance, that are interested in diving into this level of freedom through movement,\_exploring authenticity and personal expression.</p>"
+  heading: Who the LTM Mentorship is for
+  description_html: Describe the prospective student
   background-image:
-    background_image: /uploads/images/manamei-17.jpg
+    background_image: /uploads/images/manamei-5.jpg
     image_focus: center
 inside-the-course:
   heading: Inside the Wisdom Body Immersion
