Updated 1 file via CloudCannon.

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -2,56 +2,49 @@
 layout: default
 slug: liberation-through-movement-mentorship
 title: Liberation Through Movement Mentorship
-description_html: >-
-  <p>Add description here</p>
+description_html: <p>Add description here</p>
 featured-image: /uploads/images/manamei-24.jpg
 heading:
   title: Liberation Through Movement Mentorship
   subtitle: Mentorship & Facilitator Training
-  description_html: >-
-    Short description here.
+  description_html: Short description here.
   button-enroll:
     text: Apply now
-    url: 
+    url:
   button-video:
     show: false
     text: Watch the video
-    url: 
+    url:
   background_image: /uploads/images/manamei-24.jpg
 banner:
-  - image_path: 
+  - image_path:
     title: Phase 1
     benefit: Connection to the physical body
-  - image_path: 
+  - image_path:
     title: Phase 2
     benefit: Connection to the emotional body
-  - image_path: 
+  - image_path:
     title: Phase 3
     benefit: Connection to the transpersonal body
-  - image_path: 
+  - image_path:
     title: Phase 4
     benefit: The art of authentic space holding and LTM Facilitator training
 course-description:
   heading: Discover the essence of the LTM Mentorship
-  description_html: >-
-    <p>Add description here</p>
+  description_html: <p>Add description here</p>
   module:
-   - image_path: /uploads/icons/manamei-6.png
-     title: Phase 1, Connection to the Physical Body
-     description_html: >-
-       <p>Description</p>
-   - image_path: /uploads/icons/manamei-6.png
-     title: Phase 2, Connection to the Emotional Body
-     description_html: >-
-       <p>Description</p>
-   - image_path: /uploads/icons/manamei-6.png
-     title: Phase 3, Connection to the Transpersonal Body
-     description_html: >-
-       <p>Description</p>
-   - image_path: /uploads/icons/manamei-6.png
-     title: Phase 4, The art of authentic space holding and LTM Facilitator training
-     description_html: >-
-       <p>Description</p>
+    - image_path: /uploads/icons/manamei-6.png
+      title: Phase 1, Connection to the Physical Body
+      description_html: <p>Description</p>
+    - image_path: /uploads/icons/manamei-6.png
+      title: Phase 2, Connection to the Emotional Body
+      description_html: <p>Description</p>
+    - image_path: /uploads/icons/manamei-6.png
+      title: Phase 3, Connection to the Transpersonal Body
+      description_html: <p>Description</p>
+    - image_path: /uploads/icons/manamei-6.png
+      title: Phase 4, The art of authentic space holding and LTM Facilitator training
+      description_html: <p>Description</p>
 who-its-for:
   heading: Who the LTM Mentorship is for
   description_html: Describe the prospective student
@@ -59,41 +52,65 @@ who-its-for:
     background_image: /uploads/images/manamei-5.jpg
     image_focus: center
 inside-the-course:
-  heading: Inside the Wisdom Body Immersion
-  description_html: >-
-    In Wisdom Body, each module brings a new dimension of understanding. Our
-    program is structured in four modules, each offering a comprehensive
-    approach to embodied awareness and expression.
+  heading: Inside the LTM Mentorship
+  description_html: <p>Description of the STRUCTURE of the course goes here.</p>
   module:
-    - title: Module 1
-      description_html: This is a lengthy answer.
+    - title: 'Phase 1: Fall: The Homecoming: Overview'
+      description_html: >-
+        <ul><li>Phase 1 Overview PDF download</li><li>Pre-Post Pracitce Care PDF
+        download</li></ul>
       time:
-        show: true
+        show: false
         hours: 1
         minutes: 16
-    - title: Module 2
-      description_html: This is a lengthy answer.
+    - title: 'Phase 1, Week 1: Safety In My Body'
+      description_html: >-
+        <ul><li>The Daily Dose practice lesson</li><li>Writing
+        exercise</li><li>Practice 1: Coming Home meditation
+        (audio)</li><li>Practice 2: Joint Articulation movement meditation
+        (audio)</li><li>Practice 3: Mana Movement Module
+        (video)</li><li>Practice 4: Somatic Movement: Isolations &amp;
+        Initiations (video)</li><li>Practice 5: Mana Movement Module
+        (video)</li></ul>
       time:
-        show: true
+        show: false
         hours: 1
         minutes: 16
-    - title: Module 3
-      description_html: This is a lengthy answer.
+    - title: 'Phase 1, Week 2: Accept & Let It Go'
+      description_html: >-
+        <ul><li>The Daily Dose practice: Shaking</li><li>Writing
+        Exercise</li><li>Practice 1: Grounding &amp; Presence Meditation
+        (audio)</li><li>Practice 2: Mana Movement Module
+        (video)</li><li>Practice 3: Somatic Movement: Movement Dynamics
+        (video)</li><li>Practice 4: Embody the Ugly Masterclass
+        (video)</li></ul>
       time:
-        show: true
+        show: false
         hours: 1
         minutes: 16
-    - title: Module 4
-      description_html: This is a lengthy answer.
+    - title: 'Phase 1, Week 3: Love & Liberation'
+      description_html: >-
+        <ul><li>Breath In, Expand&nbsp;</li><li>The Daily Dose practice:
+        Gratitude List</li><li>Writing exercise</li><li>Practice 1: Bodyplay
+        movement meditation (audio)</li><li>Practice 2: Mana Movement Module
+        (video)</li><li>Practice 3: Somatic Movements: 5 Levels of Space
+        (video)</li><li>Practice 4: Painting Space movement meditation
+        (audio</li><li>Practice 5: Writing &amp; Embodiment</li></ul>
       time:
-        show: true
+        show: false
         hours: 1
         minutes: 16
+    - title: ''
+      description_html: ''
+      time:
+        show: false
+        hours: 0
+        minutes: 0
   background-image:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials:
-  background_image: /uploads/images/manamei-20.jpg
+  background_image: /uploads/images/manamei-2.jpg
   testimonials:
     - testimonial: This is a testimonial
       author: Regina Philange
@@ -116,11 +133,11 @@ investment:
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $300
+      price: $3000
     payment-plan:
       show: true
       heading: Payment plan
-      price: $180 x 12 months
+      price: $800 x 4 months
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -176,16 +193,10 @@ faq:
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta:
-  heading: Something greater
-  description_html: >-
-    <p>There is something much greater than you or me, or our physical bodies
-    and minds, that exists in the unseen world and is the source of what we call
-    magic, and which is always working to bring us back into alignment with our
-    divine path and purpose - that something is your Wisdom Body.</p><p>This
-    immersion will provide you with the tools & experiences to help you
-    reconnect with your own Wisdom Body and step into your full power.</p>
+  heading: A headline
+  description_html: <p>Empowering text</p>
   button:
-    text: Enroll now
+    text: Apply now
     url:
   background-image:
     background_image: /uploads/images/manamei-22.jpg
