hide from google

--- a/mana-movement.html
+++ b/mana-movement.html
@@ -231,7 +231,7 @@ seo:
   description:
   keywords:
   social_image:
-  hide-from-google: false
+  hide-from-google: true
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
