--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -136,7 +136,7 @@ seo:
   description: 
   keywords: 
   social_image: 
-  hide-from-google: false
+  hide-from-google: true
 ---
 
 <!-- Course Heading -->
