--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -190,7 +190,7 @@ seo:
   description:
   keywords:
   social_image:
-  hide-from-google: false
+  hide-from-google: true
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
