little updates before sending to mana

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -138,6 +138,9 @@ investment:
       show: true
       heading: Payment plan
       price: $800 x 4 months
+  button: 
+    url: 
+    text: Apply now
 faq:
   heading: Frequently asked questions
   questions-and-answers:
