--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -204,6 +204,9 @@ investment:
       show: false
       heading: Payment plan
       price:
+  button: 
+    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    text: Enroll Now
 faq:
   heading: Frequently asked questions
   questions-and-answers:
