--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -10,7 +10,7 @@ heading:
   description: reconnect with your innate feminine power
   button-enroll: 
     text: Enroll now
-    url: 
+    url: https://manamei.teachable.com/p/wisdom-body
   button-video: 
     show: true
     text: Watch the video
@@ -106,6 +106,9 @@ investment:
       show: true
       heading: Payment plan
       price: $180 x 12 months
+  button: 
+    url: https://manamei.teachable.com/p/wisdom-body
+    text: Enroll Now
 faq: 
   heading: Frequently asked questions
   questions-and-answers: 
