Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -1,50 +1,89 @@
 ---
-layout: default 
-title: 
-header: 
+layout: default
+title:
+header:
   logo: /uploads/icons/manamei-11.png
   title: Mana Mei
   subtitle: Liberation Through Movement Founder
   subtitle-2: International Feminine Embodiedment Movement Leader
-  image_path: 
-banner-1: 
-  text_html: Come back home to your <span class="font-serif">True Self</span><br>Reclaim your <span class="font-serif">Feminine Power</span><br><span class="font-serif">Liberate</span> your <span class="font-serif">Fullest Self Expression</span>
+  image_path:
+banner-1:
+  text_html: >-
+    Come back home to your <span class="font-serif">True Self</span><br>Reclaim
+    your <span class="font-serif">Feminine Power</span><br><span
+    class="font-serif">Liberate</span> your <span class="font-serif">Fullest
+    Self Expression</span>
 about-ltm:
   heading: What is Liberation Through Movement?
-  description_html: <p>Liberation Through Movement is a personal transformation and healing modality composed of intentionally crafted Embodied Movement and Somatic Dance Practices.</p><p>When you dive into the vast world of Liberation Through Movement, you are embarking on a life-changing journey into deep reconnection with all aspects of your TRUE SELF, remembering who you are, and coming back home to your inner sanctuary of SAFETY & FREEDOM</p><p>It is an all-in-one experience- mindfulness meditation, physical activation, and spiritual liberation.</p><p>It connects the energetic and physical bodies- heightening your inner wisdom and allowing you to meet thus world in full authentic expression</p><p>It awakens your authentic and unique expression by surpassing the language of the mind and accessing deep layers of intuitive knowing.</p><p>Liberation Through Movement HEALS- by way of returning you to your innate wholeness, reclaiming fragmented and forgotten aspects of your Self, and creating a safe container for you to step back into the driver seat of your life.</p><span class="text-sm-serif md:text-md-serif text-feature">Quiet your Mind. Activate your Body. Awaken your Spirit.</span>
+  description_html: >-
+    <p>Liberation Through Movement is a personal transformation and healing
+    modality composed of intentionally crafted Embodied Movement and Somatic
+    Dance Practices.</p><p>When you dive into the vast world of Liberation
+    Through Movement, you are embarking on a life-changing journey into deep
+    reconnection with all aspects of your TRUE SELF, remembering who you are,
+    and coming back home to your inner sanctuary of SAFETY & FREEDOM</p><p>It is
+    an all-in-one experience- mindfulness meditation, physical activation, and
+    spiritual liberation.</p><p>It connects the energetic and physical bodies-
+    heightening your inner wisdom and allowing you to meet thus world in full
+    authentic expression</p><p>It awakens your authentic and unique expression
+    by surpassing the language of the mind and accessing deep layers of
+    intuitive knowing.</p><p>Liberation Through Movement HEALS- by way of
+    returning you to your innate wholeness, reclaiming fragmented and forgotten
+    aspects of your Self, and creating a safe container for you to step back
+    into the driver seat of your life.</p><span class="text-sm-serif
+    md:text-md-serif text-feature">Quiet your Mind. Activate your Body. Awaken
+    your Spirit.</span>
   background_image: /uploads/images/manamei-16.jpg
-banner-2: 
- - image_path: /uploads/icons/manamei-1.png
- - image_path: /uploads/icons/manamei-2.png
- - image_path: /uploads/icons/manamei-3.png
+banner-2:
+  - image_path: /uploads/icons/manamei-1.png
+  - image_path: /uploads/icons/manamei-2.png
+  - image_path: /uploads/icons/manamei-3.png
 about-mana:
   heading: Meet Mana Mei
-  description_html: <p>Hi, I’m Mana. And I am undeniably obsessed with movement.</p><p>I was blessed to find my passion very early in life.</p><p>I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life.</p><p>Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.</p><p>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies…</p>
+  description_html: >-
+    <p>Hi, I’m Mana. And I am undeniably obsessed with movement.</p><p>I was
+    blessed to find my passion very early in life.</p><p>I first stepped foot in
+    a dance studio at age 3. And from then on, I have continued to step foot
+    onto a dance floor nearly every day of my life.</p><p>Since that fateful day
+    33 years ago, my life journey has been fueled by my absolutely unwavering
+    obsession with dance.</p><p>But life as a dancer hasn’t always been glory
+    and fame, rainbows and butterflies…</p>
   button: Learn more
   background_image: /uploads/images/manamei-39.jpg
 start-here:
   heading: Mana Movement Foundations
-  description_html: Discover the perfect daily practice that will guide you towards a deeper sense of wholeness, peace, radiance, and empowerment. This course is your gateway to embodying your most authentic self. It's more than a practice; it's a path to rediscovering your inner strength.
-  benefits: 
-   - benefit: Drop into peaceful presence with the NOW.
-   - benefit: Awaken every layer of your physical body.
-   - benefit: Increase mobility, flexibility, and fluidity.
-   - benefit: Activate your innate creativity, inspiration, and power.
-  button: 
+  description_html: >-
+    Discover the perfect daily practice that will guide you towards a deeper
+    sense of wholeness, peace, radiance, and empowerment. This course is your
+    gateway to embodying your most authentic self. It's more than a practice;
+    it's a path to rediscovering your inner strength.
+  benefits:
+    - benefit: Drop into peaceful presence with the NOW.
+    - benefit: Awaken every layer of your physical body.
+    - benefit: Increase mobility, flexibility, and fluidity.
+    - benefit: Activate your innate creativity, inspiration, and power.
+  button:
     text: Enroll now
     url: https://sso.teachable.com/secure/487916/checkout/3804105/mana-movement
   video_url: https://www.youtube.com/embed/5sEVM981_X0?si=ZQjVEKlLQNLUTPLR
   background_image: uploads/backgrounds/manamei-1.png
 testimonials:
   background_image: /uploads/images/manamei-1.jpg
-  overlay_style: dark
+  overlay_style: light
   testimonials:
-   - testimonial: I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days, weeks, and years to come, watching the magic unfold.
-     author: Minou Sadeghi, Embodied Temple Keeper
-   - testimonial: I am allowing energy to move through me, finding my own medicine, and the power in sisterhood continually helps me to come home to myself. I am eternally grateful
-     author: Julie De Lorenzo
+    - testimonial: >-
+        I feel infinitely grateful and blessed to have this opportunity to
+        immerse myself and fully receive Mana’s wisdom, teachings and practices
+        at such a potent time in the evolution of consciousness, and will
+        continue daily with these rituals for the days, weeks, and years to
+        come, watching the magic unfold.
+      author: Minou Sadeghi, Embodied Temple Keeper
+    - testimonial: >-
+        I am allowing energy to move through me, finding my own medicine, and
+        the power in sisterhood continually helps me to come home to myself. I
+        am eternally grateful
+      author: Julie De Lorenzo
 ---
-
 <!-- Hero Banner -->
 {% include hero-banner-home.html %}
 
