after call with Daniel

--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -1,5 +1,5 @@
 ---
-layout: program
+layout: default
 slug: mana-movement-foundations
 title: Mana Movement Foundations
 description_html: >-
@@ -134,7 +134,7 @@ inside-the-course:
         free movement exploration, discovering your own unique way of moving in
         circles, spirals, and waves.&nbsp;</p>
       time:
-        show: false
+        show: true
         hours: 1
         minutes: 16
     - title: Module 2
@@ -294,6 +294,7 @@ seo:
 
 <!-- Course Description -->
 {% include description-course-grid.html %}
+Bob
 
 <!-- Who It's For -->
 {% include who-its-for.html %}
