--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -19,6 +19,7 @@ heading:
     text: Watch the video
     url: https://youtu.be/5sEVM981_X0?
   background_image: /uploads/images/manamei-27.jpg
+  overlay_style: medium
 banner:
   - image_path: /uploads/icons/manamei-19.png
     title: Mind
@@ -65,31 +66,10 @@ course-description:
     day from a place of peace and power.</li><li>Establish an unwavering anchor,
     feeling of safety, as well as a sense of expansion and freedom in every
     moment of your life.</li></ul>
-  module:
-    - image_path: ''
-      title: Meditation - Mind
-      description_html: >-
-        <p>Drop into peaceful presence with the NOW.</p><p>Bring the mind into
-        harmony with the body.</p><p>Learn to slow thoughts and calm the
-        mind.</p><p>Practice sustained intentional focus.</p><p>Take back
-        control of your thoughts &amp; actions.</p>
-    - image_path: ''
-      title: Activation - Body
-      description_html: >-
-        <p>Awaken every layer of the physical body.</p><p>Stretch and strengthen
-        muscles.</p><p>Increase joint mobility.</p><p>Release blockages and
-        stagnation.</p><p>Expand flexibility and fluidity.</p>
-    - image_path: ''
-      title: Liberation - Spirit
-      description_html: >-
-        <p>Open energy channels through the body.</p><p>Realign with
-        unrestricted life force energy flow.</p><p>Awaken creativity and
-        inspiration.</p><p>Activate embodied pleasure and power.</p><p>Reclaim
-        authenticity and radiance.</p>
 who-its-for:
   heading: Who Mana Movement Foundations is for
   description_html: >-
-    <p>This course is for anyone who is ready to:</p><ul><li>Unlock their full
+    <p>This course is for anyone who is ready to:</p><ul class="list-none"><li>Unlock their full
     creative potential by accessing the well of life force energy flowing
     within.</li><li>Realign with a life filled with inspiration, beauty,
     pleasure, and flow.</li><li>Establish an unwavering sense of peace and
@@ -104,6 +84,7 @@ who-its-for:
   background-image:
     background_image: /uploads/images/manamei-21.jpg
     image_focus: center
+  overlay_style: medium
 inside-the-course:
   heading: Inside Mana Movement Foundations
   description_html: >-
@@ -123,7 +104,7 @@ inside-the-course:
     structure and concept of the practice, plus the full length video guided
     practice.&nbsp;</p>
   module:
-    - title: Module 1
+    - title: Practice 1
       description_html: >-
         <p>The first practice will take you through a thorough exploration of
         the foundational seated MANA Movement practice, focused on activating
@@ -135,9 +116,9 @@ inside-the-course:
         circles, spirals, and waves.&nbsp;</p>
       time:
         show: true
-        hours: 1
-        minutes: 16
-    - title: Module 2
+        hours: 0
+        minutes: 39
+    - title: Practice 2
       description_html: >-
         <p>The second practice is an evolution of practice one. In this
         practice, you will travel through all four body positions, moving from
@@ -147,9 +128,9 @@ inside-the-course:
         expression and allow the transmutation and expression of your luscious
         inner landscape.</p>
       time:
-        show: false
-        hours: 1
-        minutes: 16
+        show: true
+        hours: 0
+        minutes: 51
   background-image:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
@@ -294,7 +275,6 @@ seo:
 
 <!-- Course Description -->
 {% include description-course-grid.html %}
-Bob
 
 <!-- Who It's For -->
 {% include who-its-for.html %}
