--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -136,6 +136,7 @@ inside-the-course:
     image_focus: bottom
 testimonials:
   background_image: /uploads/images/manamei-20.jpg
+  overlay_style: medium
   testimonials:
     - testimonial: ”I love it!! I've been searching for this movement my whole life.”
       author:
@@ -188,6 +189,8 @@ investment:
   button: 
     url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
     text: Enroll Now
+  background_image: /uploads/backgrounds/manamei-1.png
+  overlay_style: light
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -255,6 +258,7 @@ cta:
   background-image:
     background_image: /uploads/images/manamei-44.jpg
     background-position: center
+    overlay_style: medium
 seo:
   title: Mana Movement Foundations
   description:
