--- a/mana-movement.html
+++ b/mana-movement.html
@@ -1,5 +1,5 @@
 ---
-layout: program
+layout: default
 slug: mana-movement
 title: Mana Movement
 description_html: >-
@@ -18,6 +18,7 @@ heading:
     text: Watch the video
     url: 
   background_image: /uploads/images/manamei-30.jpg
+  overlay_style: medium
 course-description:
   heading: Discover the essence of Mana Movement
   description_html: >-
@@ -29,6 +30,7 @@ who-its-for:
   background-image:
     background_image: /uploads/images/manamei-19.jpg
     image_focus: center
+  overlay_style: medium
 inside-the-course:
   heading: Inside Mana Movement
   description_html: >-
@@ -109,6 +111,7 @@ inside-the-course:
     image_focus: bottom
 testimonials:
   background_image: /uploads/images/manamei-11.jpg
+  overlay_style: light
   testimonials:
     - testimonial: ”I love it!! I've been searching for this movement my whole life.”
       author:
@@ -226,6 +229,7 @@ cta:
   background-image:
     background_image: /uploads/images/manamei-36.jpg
     background-position: center
+    overlay_style: medium
 seo:
   title: Mana Movement Foundations
   description:
