--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ about-ltm:
     md:text-md-serif text-feature">Quiet your Mind. Activate your Body. Awaken
     your Spirit.</span>
   background_image: /uploads/images/manamei-16.jpg
+  overlay_style: dark
 banner-2:
   - image_path: /uploads/icons/manamei-1.png
   - image_path: /uploads/icons/manamei-2.png
@@ -50,6 +51,7 @@ about-mana:
     and fame, rainbows and butterflies…</p>
   button: Learn more
   background_image: /uploads/images/manamei-39.jpg
+  overlay_style: medium
 start-here:
   heading: Mana Movement Foundations
   description_html: >-
