--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -16,6 +16,7 @@ heading:
     text: Watch the video
     url:
   background_image: /uploads/images/manamei-24.jpg
+  overlay_style: medium
 banner:
   - image_path:
     title: Phase 1
@@ -51,6 +52,7 @@ who-its-for:
   background-image:
     background_image: /uploads/images/manamei-5.jpg
     image_focus: center
+    overlay_style: light
 inside-the-course:
   heading: Inside the LTM Mentorship
   description_html: <p>Description of the STRUCTURE of the course goes here.</p>
@@ -111,6 +113,7 @@ inside-the-course:
     image_focus: bottom
 testimonials:
   background_image: /uploads/images/manamei-2.jpg
+  overlay_style: light
   testimonials:
     - testimonial: This is a testimonial
       author: Regina Philange
@@ -204,6 +207,7 @@ cta:
   background-image:
     background_image: /uploads/images/manamei-22.jpg
     background-position: center
+    overlay_style: medium
 seo:
   title:
   description:
