--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -16,6 +16,7 @@ heading:
     text: Watch the video
     url: 
   background_image: /uploads/images/manamei-14.jpg
+  overlay_style: medium
 banner: 
  - image_path: /uploads/icons/manamei-19.png
    title: Ritual
@@ -48,6 +49,7 @@ who-its-for:
   background-image: 
     background_image: /uploads/images/manamei-17.jpg
     image_focus: center
+  overlay_style: medium
 inside-the-course:
   heading: Inside the Wisdom Body Immersion
   description_html: In Wisdom Body, each module brings a new dimension of understanding. Our program is structured in four modules, each offering a comprehensive approach to embodied awareness and expression.
@@ -80,7 +82,8 @@ inside-the-course:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials: 
-  background_image: /uploads/images/manamei-20.jpg
+  background_image: /uploads/images/manamei-18.jpg
+  overlay_style: medium
   testimonials: 
    - testimonial: This is a testimonial
      author: Regina Philange
@@ -134,6 +137,7 @@ cta:
   background-image: 
     background_image: /uploads/images/manamei-22.jpg
     background-position: center
+    overlay_style: medium
 seo: 
   title: 
   description: 
