--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -26,6 +26,7 @@ heading:
     text: Watch the video
     url: https://youtu.be/VOS9H1czAhU?si=mbz84MhvrBivX01-
   background_image: /uploads/images/manamei-15.jpg
+  overlay_style: medium
 banner:
   - image_path: /uploads/icons/manamei-19.png
     title: Need
@@ -57,6 +58,7 @@ who-its-for:
   background-image:
     background_image: /uploads/images/manamei-10.jpg
     image_focus: center
+  overlay_style: medium
 testimonials:
   background_image: /uploads/backgrounds/manamei-4.jpg
   testimonials:
@@ -114,6 +116,7 @@ investment:
       heading: Payment plan
       price: $180 x 12 months
   background_image: /uploads/images/manamei-3.jpg
+  overlay_style: light
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -185,6 +188,7 @@ cta:
   background-image:
     background_image: /uploads/images/manamei-47.jpg
     background-position: center
+    overlay_style: medium
 seo:
   title:
   description:
