--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header:
   title: Mana Mei
   subtitle: Liberation Through Movement Founder
   subtitle-2: International Feminine Embodiedment Movement Leader
-  image_path:
+  overlay_style: dark
 banner-1:
   text_html: >-
     Come back home to your <span class="font-serif">True Self</span><br>Reclaim
