--- a/offerings.html
+++ b/offerings.html
@@ -46,7 +46,7 @@ cta:
   background: 
     background_image: /uploads/images/manamei-30.jpg
     background_position: top
-    overlay: true
+    overlay_style: dark
 ---
 
 <!-- Hero Banner -->
