--- a/about.html
+++ b/about.html
@@ -16,28 +16,34 @@ cta:
 gallery: 
  - image_path: /uploads/images/manamei-45.jpg
    seo-description: 
+   image_focus: 
  - image_path: /uploads/images/manamei-33.jpg
    seo-description:
+   image_focus: 
  - image_path: /uploads/images/manamei-42.jpg
    seo-description:
+   image_focus: right
  - image_path: /uploads/images/manamei-6.jpg
    seo-description:
+   image_focus: 
  - image_path: /uploads/images/manamei-40.jpg
    seo-description:
+   image_focus: 
  - image_path: /uploads/images/manamei-43.jpg
    seo-description:
+   image_focus: 
  - image_path: /uploads/images/manamei-38.jpg
    seo-description:
+   image_focus: 
  - image_path: /uploads/images/manamei-41.jpg
    seo-description:
+   image_focus: 
  - image_path: /uploads/images/manamei-36.jpg
    seo-description:
- - image_path: /uploads/images/manamei-26.png
-   seo-description:
- - image_path: /uploads/images/manamei-34.jpg
-   seo-description:
+   image_focus:  
  - image_path: /uploads/images/manamei-37.jpg
    seo-description:
+   image_focus: 
 ---
 
 <!-- About Mana Mei -->
