--- a/offerings-alt.html
+++ b/offerings-alt.html
@@ -62,6 +62,8 @@ cta:
       {% for item in page.map.offering %}
       {% capture thecycle %}{% cycle 'left', 'right' %}{% endcapture %}
       {% if thecycle == 'left' %}
+
+      <!-- Content Left -->
       <div class="col-span-5 mb-12 
       {% cycle 'text-right', 'text-left' %}">
           <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
@@ -70,20 +72,28 @@ cta:
           <a href="{{item.url}}" class="link">Learn more</a>
       </div>
 
-      <!-- icon -->
-      <div class="col-span-2 px-2">
-          <img src={{item.image_path}} class="h-28 bg-black">
+      <div class="col-span-2 px-2 text-center">
+          <img src="{{item.image_path}}" class="h-28 bg-black z-20 inline-block">
           <div class="grid grid-cols-2 h-full">
-              <div class="border-r-feature border h-full"></div>
+              <div class="border-r border-feature h-full"></div>
               <div></div>
           </div>
       </div>
 
       <div class="col-span-5"></div>
       {% else %}
+
+      <!-- Content Right -->
       <div class="col-span-5"></div>
 
-      <div class="col-span-2 flex justify-center"><img src={{item.image_path}} class="h-28"></div>
+      <div class="col-span-2 px-2 text-center">
+          <img src="{{item.image_path}}" class="h-28 bg-black z-20 inline-block">
+          <div class="grid grid-cols-2 h-full">
+              <div class="border-r border-feature h-full"></div>
+              <div></div>
+          </div>
+      </div>
+
       <div class="col-span-5 p-5p 
       {% cycle 'text-right', 'text-left' %}">
           <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
