--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -56,8 +56,14 @@ course-description:
     into every single part of your body, this will in turn benefit the way you
     move through life and the way you meet life in every single
     moment.&nbsp;</p>
-  benefits_html: >-
-    <p>By practicing MANA Movement, you will:</p><ul><li>Activate the
+  background-image: 
+    background_image: /uploads/images/manamei-29.jpg
+    image_focus: 
+    overlay_style: dark
+benefits:
+  heading: By practicing Mana Movement, you will
+  description_html: >-
+    <ul><li>Activate the
     mind-body-spirit harmony for holistic wellbeing.</li><li>Reconnect with your
     physical body, energy body, and your ability to meet the world in
     authenticity.</li><li>Explore your unique creative expression and transmute
@@ -66,6 +72,10 @@ course-description:
     day from a place of peace and power.</li><li>Establish an unwavering anchor,
     feeling of safety, as well as a sense of expansion and freedom in every
     moment of your life.</li></ul>
+  background-image: 
+    background_image: 
+    image_focus: 
+    overlay_style: 
 who-its-for:
   heading: Who Mana Movement Foundations is for
   description_html: >-
@@ -189,8 +199,9 @@ investment:
   button: 
     url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
     text: Enroll Now
-  background_image: /uploads/backgrounds/manamei-1.png
-  overlay_style: light
+  background_image: 
+  overlay_style: 
+  border: border-y border-feature
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -275,7 +286,10 @@ seo:
 <!-- Video -->
 
 <!-- Course Description -->
-{% include description-course-grid.html %}
+{% include description-course.html %}
+
+<!-- Course Benefits -->
+{% include benefits-course.html %}
 
 <!-- Who It's For -->
 {% include who-its-for.html %}
